kubelet: Add extra args environment variable
If extra arguments are needed by the user the arguments can be injected
into the /etc/kubernetes/kubelet-env file with the KUBELET_EXTRA_ARGS
environment variable.

--- a/pkg/controller/template/test_data/templates/aws/master/units/kubelet.service
+++ b/pkg/controller/template/test_data/templates/aws/master/units/kubelet.service
@@ -25,6 +25,7 @@ contents: |
         \
         --anonymous-auth=false \
         --register-with-taints=node-role.kubernetes.io/master=:NoSchedule \
+        ${KUBELET_EXTRA_ARGS} \
 
   Restart=always
   RestartSec=10
