--- a/pkg/controller/template/test_data/templates/libvirt/worker/units/kubelet.service
+++ b/pkg/controller/template/test_data/templates/libvirt/worker/units/kubelet.service
@@ -23,6 +23,7 @@ contents: |
         --cloud-provider= \
         \
         --anonymous-auth=false \
+        ${KUBELET_EXTRA_ARGS} \
 
   Restart=always
   RestartSec=10
