--- a/pkg/controller/template/test_data/templates/libvirt/master/units/kubelet.service
+++ b/pkg/controller/template/test_data/templates/libvirt/master/units/kubelet.service
@@ -25,6 +25,7 @@ contents: |
         \
         --anonymous-auth=false \
         --register-with-taints=node-role.kubernetes.io/master=:NoSchedule \
+        ${KUBELET_EXTRA_ARGS} \
 
   Restart=always
   RestartSec=10
