--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -121,8 +121,7 @@ required = [
 
 [[constraint]]
   name = "k8s.io/code-generator"
-  source = "github.com/openshift/kubernetes-code-generator"
-  branch = "origin-4.0-kubernetes-1.12.4"
+  branch = "kubernetes-1.12.5"
 
 [[constraint]]
   name = "k8s.io/kubelet"
