--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -121,7 +121,7 @@ required = [
 
 [[constraint]]
   name = "k8s.io/code-generator"
-  branch = "kubernetes-1.12.5"
+  version = "kubernetes-1.12.5"
 
 [[constraint]]
   name = "k8s.io/kubelet"
