break kubeletca certificate into a new cert

--- a/manifests/machineconfigdaemon/clusterrole.yaml
+++ b/manifests/machineconfigdaemon/clusterrole.yaml
@@ -8,7 +8,7 @@ rules:
   resources: ["nodes"]
   verbs: ["get", "list", "watch", "patch", "update"]
 - apiGroups: [""]
-  resources: ["pods"]
+  resources: ["pods", "configmaps"]
   verbs: ["*"]
 - apiGroups: ["extensions"]
   resources: ["daemonsets"]
